--- a/src/pages/recipe/[id]/index.module.css
+++ b/src/pages/recipe/[id]/index.module.css
@@ -27,22 +27,6 @@
   gap: 4%;
 }
 
-@media screen and (max-width: 768px) {
-  .titleRow {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .title {
-    font-size: 2rem;
-  }
-
-  .splitContainer {
-    grid-template-columns: 1fr;
-    gap: 2rem;
-  }
-}
-
 @media screen and (max-width: 500px) {
   .title {
     word-break: break-all;
@@ -115,6 +99,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .viewCount,
@@ -123,4 +108,24 @@
   display: flex;
   align-items: center;
   gap: 0.3rem;
+}
+
+@media screen and (max-width: 768px) {
+  .titleRow {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .splitContainer {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .topRow {
+    gap: 1.5rem;
+  }
 }
